Newsletter task done

--- a/signup/index.html
+++ b/signup/index.html
@@ -4,7 +4,54 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Nunito:wght@200;300&display=swap"
+      rel="stylesheet"
+    />
     <title>Sign Up</title>
   </head>
-  <body></body>
+  <body>
+    <main>
+      <div class="signup">
+        <form>
+          <h1>Sign Up</h1>
+          <p>It's free and only takes a minute</p>
+
+          <label for="firstName">
+            First name
+            <img src="identifaction_black 1.svg" class="icon"
+          /></label>
+
+          <input type="text" name="firstName" id="firstName" />
+
+          <label for="lastName">Last name</label>
+          <input type="text" name="lastName" id="lastName" />
+
+          <label for="email">Email</label>
+          <input type="email" name="email" id="email" />
+
+          <label for="password"
+            >Password
+            <img src="password-code 1.svg" class="icon" />
+          </label>
+          <input type="password" name="password" id="password" />
+
+          <label for="confirmPassWord"
+            >Confirm Password
+            <img src="password-code 1.svg" class="icon" />
+          </label>
+          <input type="password" name="confirmPassWord" id="confirmPassWord" />
+          <button type="submit" display="block">SIGN UP</button>
+        </form>
+        <p class="terms">
+          By clicking the Sign Up button, you agree to our <a>Terms & Conditions</a> and
+          <a>Privacy Policy</a>
+        </p>
+      </div>
+      <p class="login">Already have an account? <a>Login Here</a></p>
+    </main>
+  </body>
 </html>
