--- a/6_week/grid/index.html
+++ b/6_week/grid/index.html
@@ -10,7 +10,7 @@
   <body>
     <h1>Grid examples</h1>
     <div class="grid-container">
-      <div class="item">Item 1</div>
+      <div class="item">Header</div>
       <div class="item">Item 2</div>
       <div class="item">Item 3</div>
       <div class="item">Item 4</div>
@@ -20,6 +20,15 @@
       <div class="item">Item 8</div>
       <div class="item">Item 9</div>
       <div class="item">Item 10</div>
+    </div>
+    <h1>Grid examples</h1>
+    <div class="areas-container">
+      <div class="cell header">Header</div>
+      <div class="cell aside">Aside</div>
+      <div class="cell left-top">Left Top</div>
+      <div class="cell left-bottom">Left Bottom</div>
+      <div class="cell main">Main</div>
+      <div class="cell footer">Footer</div>
     </div>
   </body>
 </html>
