some more testing with css transitions and grid

--- a/7_week/practice/index.html
+++ b/7_week/practice/index.html
@@ -19,8 +19,12 @@
           corporis cum illum repellat possimus odit! Aliquid, illo!
         </p>
         <div class="grid">
-          <div class="card">Card 1</div>
-          <div class="card">Card 2</div>
+          <div class="card frog">
+            <img src="http://source.unsplash.com/JLMEZxBcXCU" alt="Green frog" />
+          </div>
+          <div class="card">
+            <img src="http://source.unsplash.com/R5MgBBhrm4Q" alt="Cute spider" />
+          </div>
           <div class="card">Card 3</div>
           <div class="card">Card 4</div>
           <div class="card">Card 5</div>
