--- a/7_week/practice/index.html
+++ b/7_week/practice/index.html
@@ -10,6 +10,7 @@
   <body>
     <header>
       <h1>Week 7 practice</h1>
+      <div class="box"><p>Some text inside</p></div>
     </header>
     <main>
       <section>
